--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
+    "@faker-js/faker": "^8.1.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.88",
     "electron-updater": "^6.1.1",
     "sqlite3": "^5.1.6",
     "typeorm": "^0.3.17"
