--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,12 +4,14 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.vue",
-    "src/preload/*.d.ts",
-    "src/entities/*.entity.ts"
+    "src/preload/**/*.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
